--- a/component/styles/Header.module.scss
+++ b/component/styles/Header.module.scss
@@ -1,5 +1,5 @@
 .container{
-  background-color: #db39f5;
+  background-color: #177b99;
   display: flex;
   justify-content: space-between  ;
   color: white;
