--- a/component/styles/PopularSearch.module.scss
+++ b/component/styles/PopularSearch.module.scss
@@ -1,20 +1,30 @@
-.container{
-  .allCard{
+.container {
+  .allCards {
     display: flex;
-    overflow-x: auto;
-  }
-  .oneCard{
-    position: relative;
-    img{
-      height: 20vh;
-      max-width: 50vw;
-    }
-    span{
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      background-color: black;
-      color: white;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+
+    .oneCard {
+      position: relative;
+      padding-right: 3vw;
+
+      img {
+        width: 60vw;
+      }
+
+      span {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        color: white;
+        font: bold 24px/45px Helvetica, Sans-Serif;
+        letter-spacing: -1px;
+        background: rgb(0, 0, 0);
+        /* fallback color */
+        background: rgba(0, 0, 0, 0.7);
+        padding: 10px;
+      }
     }
   }
 }
