--- a/component/styles/Card.module.scss
+++ b/component/styles/Card.module.scss
@@ -1,19 +1,42 @@
-.container{
+.container {
   width: 100vw;
   // max-height: 50vh;
   overflow: scroll;
   padding: 3vw;
-  background-color:  #e1e7eb;
-  .card{
+  background-color: #e1e7eb;
+
+  .card {
     background-color: white;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding: 3vw;
-    .title{
+
+    .title {
       text-align: center;
     }
-    img{
+
+    img {
       width: 100%;
+    }
+
+    .rateIt {
+      display: flex;
+      align-items: center;
+      img {
+        width: 7vw;
+        margin-left: 10px;
+      }
+    }
+    .ratings{
+      display: flex;
+      align-items: center;
+      img {
+        width: 7vw;
+        margin-left: 10px;
+      }
+    }
+    .gray{
+      filter: grayscale(100%);
     }
   }
 }
